--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.05);
 display: flex;
 align-items: center;
 justify-content: center;
-border-radius: 47%;
+border-radius: 50%;
     margin: 8px;
       width: 25%;
 transition: all 4s;
@@ -81,9 +81,31 @@ transition: all 4s;
 .icons a:hover{
   border-radius: 50%;
 }
-.icons a img{
-  width: 100%;
-  max-width: 36px;
+.icons a #github{
+      transition: all 0.8s;
+    width: 64px;
+    height: 49px;
+  color: rgba(85,26,139);
+}
+.icons a #linkedin {
+    transition:all  0.8s;
+     width: 38px;
+    height: 38px
+
+}
+.icons a #linkedin:hover{
+  color: #B366D8;
+}
+.icons a #github:hover{
+  color: #B366D8;
+}
+.icons a #inst:hover{
+  color: #B366D8;
+}
+#inst{
+  transition:all  0.8s;
+      width: 64px;
+    height: 49px;
 }
 .obje{
   flex: 1;
@@ -134,7 +156,7 @@ color: #43085F;
     border-radius: 16px;
     width: 73%;
     height: 16%;
-    margin-top: 20px;
+    margin-top: 15px;
     border: none;
     cursor: pointer;
     color: #43085F;
