--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
 }
 /* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%;} /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
 article{
-  width: 385px;
-  height: 766px;
+  width: 30%;
+    height: 115%;
   display: flex;
   flex-direction: column;
  position:relative;
@@ -81,32 +81,17 @@ transition: all 4s;
 .icons a:hover{
   border-radius: 50%;
 }
-.icons a #github{
+.icons a svg{
       transition: all 0.8s;
     width: 64px;
     height: 49px;
   color: rgba(85,26,139);
 }
-.icons a #linkedin {
-    transition:all  0.8s;
-     width: 38px;
-    height: 38px
 
-}
-.icons a #linkedin:hover{
+.icons a svg:hover{
   color: #B366D8;
 }
-.icons a #github:hover{
-  color: #B366D8;
-}
-.icons a #inst:hover{
-  color: #B366D8;
-}
-#inst{
-  transition:all  0.8s;
-      width: 64px;
-    height: 49px;
-}
+
 .obje{
   flex: 1;
   padding-top: 40px;
