--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body{
+html,body{
   width: 100%;
   height: 100vh;
   background: linear-gradient(101.07deg, #2E3C87 7.93%, #6A1094 93.3%);
@@ -13,22 +13,22 @@ body{
   justify-content: center;
 }
 /* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%;} /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
-article{
+main{
   width: 30%;
-    height: 115%;
+  height: auto; 
   display: flex;
   flex-direction: column;
- position:relative;
- text-align: center;
- align-self: flex-end;
+  position:relative;
+  text-align: center;
+  align-self: flex-end;
 }
 .perfil{
-      width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-    height: 43%;
+  width: 100%;
+  height: 43%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;    
 
 }
 .perfil img{
@@ -37,35 +37,33 @@ article{
 }
  h2,p{
   font-family: Nunito;
- font-style: normal;
-
-text-align: center;
-color: #ffff;
+  font-style: normal;
+  text-align: center;
+  color: #ffff;
 }
 .perfil h2{
-   font-weight: 600;
+ font-weight: 600;
 font-size: 18px;
 line-height: 25px;
 
 }
 .perfil p {
   font-weight: normal;
-font-size: 14px;
-line-height: 19px;
-
-color: #E3E3E3;
+  font-size: 14px;
+  line-height: 19px;
+  color: #E3E3E3;
 }
 .perfil .icons {
- width: 69%;
-    height: 13%;
-    display: flex;
-    justify-content: center;
-    background: rgba(224, 224, 224, 0.35);
-    border-radius: 50px;
-    margin-top: 80px;
-    position: absolute;
-    top: 173px;
-    animation: levitaçao 5s infinite;
+  width: 69%;
+  height: 13%;
+
+  z-index: 15;
+  display: flex;
+  animation: levitaçao 5s infinite;
+
+  justify-content: center;
+  background: rgba(224, 224, 224, 0.35);
+  border-radius: 50px;
 }
 .icons a{
 background: #FFFFFF;
@@ -92,20 +90,18 @@ transition: all 4s;
   color: #B366D8;
 }
 
-.obje{
+article{
   flex: 1;
   padding-top: 40px;
   background: #FFFFFF 100% ;
-border-radius: 50px 50px 0px 0px;
-height: 100%;
+  border-radius: 50px 50px 0px 0px;
 
 }
-.obje p{
-font-size: 18px;
-line-height: 25px;
-text-align: center;
-
-color: #43085F;
+article p{
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #43085F;
 }
 #link_img{
       align-items: center;
@@ -134,6 +130,7 @@ color: #43085F;
     cursor: pointer;
     color: #FFFFFF;
     outline: none;
+    min-height: 40px;
 }
 #button_2{
     text-align: center;
@@ -146,6 +143,7 @@ color: #43085F;
     cursor: pointer;
     color: #43085F;
     outline: none;
+    min-height: 40px;
 }
 button:hover{
   width: 76%;
@@ -162,4 +160,9 @@ button:hover{
  from{
    transform: translateY(-7px);
  }
+}
+@media only screen and (max-width: 320px) {
+  main{
+    min-width: 90%;
+  }
 }
